--- a/aquarium/aquarium.html
+++ b/aquarium/aquarium.html
@@ -33,7 +33,7 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
-<title>WebGL Aquarium</title>
+<title>User history test</title>
 <style>
 html, body {
   width: 100%;
@@ -52,10 +52,10 @@ a {
 #info {
     font-size: small;
     position: absolute;
-  	top: 0px; width: 100%;
-  	padding: 5px;
-  	text-align: center;
-  	z-index: 2;
+    top: 0px; width: 100%;
+    padding: 5px;
+    text-align: center;
+    z-index: 2;
 }
 CANVAS {
   background-color: gray;
@@ -105,6 +105,29 @@ CANVAS {
   border-radius: 10px;
   padding: 10px;
 }
+
+.startBTN {
+  position: absolute;
+  top: 400px;
+  left: 10px;
+  z-index: 3;
+  color: gray;
+  background-color: rgba(0,0,0,0.5);
+  border-radius: 10px;
+  padding: 10px;
+}
+
+.stopBTN {
+  position: absolute;
+  top: 400px;
+  left: 100px;
+  z-index: 3;
+  color: gray;
+  background-color: rgba(0,0,0,0.5);
+  border-radius: 10px;
+  padding: 10px;
+}
+
 </style>
 <link href="../jquery-ui-1.8.2.custom/css/ui-lightness/jquery-ui-1.8.2.custom.css" rel="stylesheet" />
 <script src="../jquery-ui-1.8.2.custom/js/jquery-1.4.2.min.js"></script>
@@ -115,10 +138,14 @@ CANVAS {
 <script src="aquarium-common.js"></script>
 <script src="aquarium.js"></script>
 </head>
-<body>
-<div id="info"><a href="http://threedlibrary.googlecode.com" target="_blank">tdl.js</a> - aquarium</div>
+<body >
+<div id="uiContainer">
+<div id="ui"></div>
+</div>
+<div opacity:0.001 id="viewContainer" style="width:100%; height:50%">
+<canvas id="canvas" width="1024" height="1000" style="width: 100%; height: 100%;"></canvas>
 <div class="fpsContainer">
-  <div class="fps">fps: <span id="fps"></span></div>
+  <div class="fps" font-size = 1px>fps: <span id="fps"></span></div>
   <div class="fps">canvas width: <span id="canvasWidth"></span></div>
   <div class="fps">canvas height: <span id="canvasHeight"></span></div>
   <div id="topUI">
@@ -131,14 +158,24 @@ CANVAS {
   </div>
   </div>
 </div>
-<div id="uiContainer">
-<div id="ui"></div>
-</div>
-<div id="viewContainer">
-<canvas id="canvas" width="1024" height="1024" style="width: 100%; height: 100%;"></canvas>
 </div>
 <div id="msgContainer"></div>
+<button class='startBTN' name='start' type='button' onclick='beginTiming()'>start</button>
+<button class='stopBTN' name='stop' type='button' onclick='stopTiming()'>stop</button>
+<!-- <span id="Hint" value='name'></span> -->
+<!-- <span id="txtHint"></span></p> -->
+
 </body>
+<!-- <script>
+const Hint = document.getElementById('Hint');
+Hint.addEventListener("DOMAttrModified", updateValue);
+</script> -->
+<script>
+    function recordTime(){
+    time_onload = performance.now() - time_300;
+    console.log(time_onload);
+  }
+</script>
 <script id="texVertexShader" type="text/something-not-javascript">
 attribute vec4 position;
 attribute vec2 texCoord;
